--- a/linewars/linewars.qsf
+++ b/linewars/linewars.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE 5CEBA4F23C7
 set_global_assignment -name TOP_LEVEL_ENTITY vga
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:35:59  MAY 31, 2018"
-set_global_assignment -name LAST_QUARTUS_VERSION 13.0
+set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name VHDL_FILE vga.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
@@ -66,4 +66,16 @@ set_location_assignment PIN_G8 -to Vsync
 set_location_assignment PIN_H8 -to Hsync
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_location_assignment PIN_M9 -to clk
+set_location_assignment PIN_U13 -to blue_switch
+set_location_assignment PIN_V13 -to green_switch
+set_location_assignment PIN_T13 -to red_switch
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to B[3]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to B[2]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to B[1]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to B[0]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to Hsync
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[3]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[2]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[1]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
