--- a/linewars/linewars.qsf
+++ b/linewars/linewars.qsf
@@ -38,15 +38,11 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CEBA4F23C7
-set_global_assignment -name TOP_LEVEL_ENTITY vga
+set_global_assignment -name TOP_LEVEL_ENTITY linewars
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:35:59  MAY 31, 2018"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.0
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name VHDL_FILE vga.vhd
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
@@ -64,11 +60,23 @@ set_location_assignment PIN_A8 -to B[2]
 set_location_assignment PIN_A7 -to B[3]
 set_location_assignment PIN_G8 -to Vsync
 set_location_assignment PIN_H8 -to Hsync
-set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_location_assignment PIN_M9 -to clk
 set_location_assignment PIN_U13 -to blue_switch
 set_location_assignment PIN_V13 -to green_switch
 set_location_assignment PIN_T13 -to red_switch
+set_global_assignment -name VHDL_FILE linewars_package.vhd
+set_global_assignment -name VHDL_FILE vga.vhd
+set_global_assignment -name CDF_FILE output_files/Chain1.cdf
+set_global_assignment -name VHDL_FILE linewars.vhd
+set_global_assignment -name VECTOR_WAVEFORM_FILE output_files/Waveform.vwf
+set_global_assignment -name SIMULATION_MODE FUNCTIONAL
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST ON -section_id eda_simulation
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/ellio/Documents/ee_125/linewars/output_files/Waveform.vwf"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to B[3]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to B[2]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to B[1]
@@ -78,4 +86,11 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[3]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[2]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[1]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to R[0]
+set_global_assignment -name CDF_FILE output_files/linewars.cdf
+set_location_assignment PIN_M6 -to p1lswitch
+set_location_assignment PIN_M7 -to p1rswitch
+set_location_assignment PIN_W9 -to p2lswitch
+set_location_assignment PIN_U7 -to p2rswitch
+set_global_assignment -name VHDL_FILE switch_debouncer.vhd
+set_location_assignment PIN_P22 -to rst
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
