--- a/linewars/linewars.qsf
+++ b/linewars/linewars.qsf
@@ -93,4 +93,5 @@ set_location_assignment PIN_W9 -to p2lswitch
 set_location_assignment PIN_U7 -to p2rswitch
 set_global_assignment -name VHDL_FILE switch_debouncer.vhd
 set_location_assignment PIN_P22 -to rst
+set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
